create groups index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
         <div class="container-fluid">
             <%= render "common/navbar" %>
-            <%= rander "common/flashes" %>
+            <%= render "common/flashes" %>
             <%= yield %>
         </div>
 
